Fix styling of status on mobile

--- a/app/assets/stylesheets/site/_sidebar.css.scss
+++ b/app/assets/stylesheets/site/_sidebar.css.scss
@@ -44,6 +44,9 @@
       .cur-step {
         margin-bottom: 7px;
     }
+    &.status-project {
+      border-top: none;
+      } 
     ul {
       padding: 0 0 0 26px; // fixes the indentation for the steps/progress
       margin-left: 7px;
@@ -74,6 +77,7 @@
       margin-bottom: 10px; // space out the steps
       list-style: none;
       position: relative;
+      
       &:first-child {
         margin-top: 10px; // give the first step some space
       }
@@ -102,9 +106,7 @@
       z-index: 2;
       }      
     } //./li
-  .status-project {
-    border-top: none;
-  }  
+ 
   .entry-future:before {
       background: none repeat scroll 0 0 white;
       border-color: #c2c2c2;
@@ -141,3 +143,4 @@
     padding: 0 7px;
     }
 }
+ 
